--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,14 @@
     opacity: 1;
     transform : scale(1.03) ;
 }
+@media(max-width:380px){
+    .card{
+        width: 90vw;
+    }
+}
+@media(max-width:230px)
+{
+    .container h1{
+        font-size: 25px;
+    }
+}
